turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: value update is not a member of java.awt.Color
		if (getCouleurSol()=colors(i)) {
                    ^